# RustSlackBot

./: Cargo.toml  seen_announcements.json
src/: config.rs  extractor.rs  filter.rs  main.rs  models.rs  seen.rs  slack.rs  summarizer.rs
src/crawlers/: base.rs  etri.rs  iitp.rs  iris.rs  kisa.rs  kisti.rs  krit.rs  mod.rs  msit.rs  nst.rs  ntis.rs
