[package]
name = "RustBot"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = {version = "0.12", features =["blocking", "json"]}
scraper = "0.20"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
dotenv = "0.15"
regex = "1"
chrono = {version = "0.4", features = ["serde"]}
log = "0.4"
env_logger = "0.11"
tokio = {version = "1", features = ["full"]}
tokio-cron-scheduler = "0.13"

